<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/help_intro" />

            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help_introduction"
                android:textColor="@color/black"
                android:textSize="15dp" />
            
             <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/help_basic_function" />

            <TextView
                android:id="@+id/tvBasic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help_basic_setting"
                android:textColor="@color/black"
                android:textSize="15dp" />
            
             <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/help_noti_function" />

            <TextView
                android:id="@+id/tvNoti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help_noti_setting"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
